
2008-7-25 Struan Robertson

  * Removed broken header file references from Mesmer project file.

_2008_07_14__13_22_07_ Chi-Hsiu Liang

  * Updated baselines using Version 179

Chi-Hsiu Liang

  * Altered  if(nologging) flag in oberror.cpp
  * Corrected the initialization (new) and destruction of m_pSystemCollisionOperator. This causes Mesmer to crash after hundreds
    of calculations.
  * rr[i] = to_double(rrProxy[i]); =>  rr[i] = rrProxy[i];

2008-7-13 Struan Robertson

  * MesmerILT.h/.cpp : Altered so that the convolved density of states is calculated by explicit invocation and not via the modelled molecule route. This is possible because this method can only be used in conjunction with MesmerILT. This allows the removal of some SuperMolecule references in ClassicalRotor.cpp.

2008-07-06 Chris Morley

  * src/main: Documentation of mesmer output streams
  
2008-7-13 Struan Robertson

  * ReactionManager.cpp: Removal of reference to SuperMolecules. This reference was used to store the combined zero point energy location of the reactants. This is now stored on the pseudo-isomer.
  * AssociationReaction.h/.cpp, Reaction.h: Changes related to the above.

2008-7-13 Struan Robertson

  * ReactionManager.cpp: Removal of unnecessary reference to SuperMolecule class.
  * MesmerILT.cpp: Check of reaction type (Mesmer ILT only applies to association reactions) and minor changes to use AssociationReaction rather than SuperMolecule.
  * AssociationReaction.h: Addition of method to obtain pointer to
reactant in excess.

2008-7-12 Struan Robertson

  * AssociationReaction.cpp/Molecule.h: Remove of unnecessary methods from SuperMolecule class.

2008-7-12 Struan Robertson

  * ReactionManager.cpp/.h: Replaced an invocation of get_bi_molecularspecies with get_pseudoIsomer as part of the rationalization of SuperMolecules.

2008-07-06 Chris Morley

  Provide -g option which turns off cinfo and ctest streams and may solve the problems
  Alvyn was having with overflowing buffers.