@@ -1,3 +1,6 @@
+2008-7-26 Struan Robertson
+
+  * ReactionManager.cpp: Temporary fix for broken HOSO test.
 
 2008-7-25 Struan Robertson
 
